--- a/app/src/main/res/layout/activity_edit_playlists.xml
+++ b/app/src/main/res/layout/activity_edit_playlists.xml
@@ -2,15 +2,84 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context="cop_4331c.gather.ui.EditPlaylistsActivity">
+                tools:context="cop_4331c.gather.ui.EditPlaylistsActivity"
+                android:background="@drawable/bg_gradient">
 
     <TextView
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Gather"
+        android:id="@+id/titleBar"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textSize="24sp"
+        android:textColor="#ffffffff"
+        android:background="#ff26a65b"
+        android:gravity="center"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"/>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/titleBar"
+        android:id="@+id/searchBar">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Edit Playlist"
+            android:id="@+id/editActivityLabel"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"/>
+    </LinearLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/editRecyclerView"
+        android:layout_below="@+id/searchBar"
+        android:layout_above="@+id/tabsLayout"/>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/tabsLayout">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Now Playling"
+            android:background="#40ffffff"
+            android:id="@+id/button5"
+            android:layout_weight="1"
+            android:backgroundTint="@android:color/holo_red_light"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Search"
+            android:background="#40ffffff"
+            android:id="@+id/searchTab"
+            android:layout_weight="1"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Edit "
+            android:background="#40ffffff"
+            android:id="@+id/editPlaylistButton"
+            android:layout_weight="1"
+            />
+
+    </LinearLayout>
 
 </RelativeLayout>
